--- a/css/main.css
+++ b/css/main.css
@@ -295,7 +295,7 @@ body {
   fill: currentColor;
 }
 
-.work-title {
+.work__title {
   color: var(--title-text-color);
   font-size: 36px;
   font-weight: 700;
@@ -304,24 +304,24 @@ body {
   margin-bottom: 50px;
 }
 
-.section.work {
+.work {
   padding-top: 0;
 }
 
-.work-list {
+.work__list {
   display: flex;
   justify-content: space-between;
 }
 
-.work-list .work-item + .work-item {
+.work__list .work__item + .work__item {
   margin-left: 30px;
 }
 
-.work-item {
+.work__item {
   position: relative;
 }
 
-.work-overlay-box {
+.overlay__box {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -333,7 +333,7 @@ body {
   background-color: var(--work-overlay-bgc-color);
 }
 
-.work-overlay-caption {
+.overlay__caption {
   font-weight: bold;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -345,7 +345,7 @@ body {
   background-color: var(--team-bgc-color);
 }
 
-.team-title {
+.team__title {
   color: var(--title-text-color);
   font-size: 36px;
   font-weight: 700;
@@ -356,28 +356,28 @@ body {
   margin-bottom: 50px;
 }
 
-.team-caption {
+.team-box__caption {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.87;
 }
 
-.team-text {
+.team-box__text {
   color: var(--primary-text-color);
   line-height: 1.87;
   margin-bottom: 16px;
 }
 
-.team-list {
+.team__list {
   display: flex;
 }
 
-.team-list .team-item + .team-item {
+.team__list .team__item + .team__item {
   margin-left: 30px;
 }
 
-.team-item {
+.team__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
@@ -389,15 +389,15 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-icon-list {
+.team-icon__list {
   display: flex;
 }
 
-.team-icon-list .team-icon-item + .team-icon-item {
+.team-icon__list .team-icon__item + .team-icon__item {
   margin-left: 10px;
 }
 
-.team-icon-link {
+.team-icon__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -407,13 +407,13 @@ body {
   transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), border-radius 250ms var(--timing-function);
 }
 
-.team-icon-link:hover, .team-icon-link:focus {
+.team-icon__link:hover, .team-icon__link:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   border-radius: 50%;
 }
 
-.icon-team {
+.team-icon__icon {
   width: 22px;
   height: 22px;
   fill: currentColor;
