--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,7 +2,7 @@
   background-color: var(--team-bgc-color);
 }
 
-.team-title {
+.team__title {
   color: var(--title-text-color);
   font-size: 36px;
   font-weight: 700;
@@ -12,25 +12,25 @@
   text-align: center;
   margin-bottom: 50px;
 }
-.team-caption {
+.team-box__caption {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.87;
 }
-.team-text {
+.team-box__text {
   color: var(--primary-text-color);
   line-height: 1.87;
   margin-bottom: 16px;
 }
-.team-list {
+.team__list {
   display: flex;
 
-    & .team-item + .team-item {
+    & .team__item + .team__item {
         margin-left: 30px;
     }
 }
-.team-item {
+.team__item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -42,15 +42,15 @@
   text-align: center;
   border-radius: 0px 0px 4px 4px;
 }
-.team-icon-list {
+.team-icon__list {
   display: flex;
 
-    & .team-icon-item + .team-icon-item {
+    & .team-icon__item + .team-icon__item {
         margin-left: 10px;
     }
 }
 
-.team-icon-link {
+.team-icon__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,7 +69,7 @@
         border-radius: 50%;
     }
 }
-.icon-team {
+.team-icon__icon {
   width: 22px;
   height: 22px;
   fill: currentColor;
