--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,7 +2,6 @@
   background-color: var(--header-bgc-color);
   padding: 60px 0;
 }
-.container.container-footer {
-  display: flex;
-  align-items: baseline;
+.footer--container {
+  @include flex(flex, null, null, null, baseline);
 }
