--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -11,9 +11,12 @@
   opacity: 1;
   visibility: visible;
   transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
+
+ 
 }
- .backdrop.is-hidden {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
