--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -1,20 +1,13 @@
-.content-button {
+.content__button {
   display: inline-block;
   padding: 6px 22px;
 
-  color: var(--title-text-color);
   background-color: var(--button-bgc-color);
   border-style: none;
   border-radius: 4px;
   cursor: pointer;
-
-  font-family: Roboto, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-
-  transition: color 250ms var(--timing-function), backgroung-color 250ms var(--timing-function),
-    box-shadow 250ms var(--timing-function);
+  @include font(Roboto, 16px, 500, 1.62, 0.03em, var(--title-text-color), null, null);
+  @include transition( color, background-color, box-shadow, var(--time), var(--timing-function));
 
     &.curent {
         color: var(--primary-white-color);
@@ -30,12 +23,11 @@
     }
 }
 
-.content-primary-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 34px;
-
-    &.content-list + .content-list {
-        margin-left: 20px;
-    }
+.content__list {
+  @include flex(flex, null, null, center, null);
+  margin-left: -8px;
+  margin-bottom: 50px;
+}
+.content__items{
+  margin-left: 8px; 
 }
