--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,36 +1,29 @@
-.features-list {
-  display: flex;
-  justify-content: space-between;
-  
-    & .features-item + .features-item {
-        margin-left: 30px;
-    }
+.features__list {
+  @include flex(flex, null, null, space-between, null);
+  margin-left: -30px;
 }
- 
-.features-item {
-  width: 270px;
-}
-.features-caption {
-  margin-bottom: 10px;
 
-  color: var(--title-text-color);
-  line-height: 1.14;
-  text-transform: uppercase;
+.features__item {
+  margin-left: 30px;
+  flex-basis: calc((100% - 90px) / 4);
 }
-.features-text {
+.features__caption {
+  margin-bottom: 10px;
+  @include font(Roboto, 14px, 700, 1.14, 0.03em, var(--title-text-color), uppercase, null);
+}
+.features__text {
   line-height: 1.71;
 }
-.features-icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 120px;
+.features__box {
+  @include flex(flex, null, null, center, center);
   margin-bottom: 30px;
+  height: 120px;
+
   color: var(--features-icon-color);
 
   background-color: var(--features-icon-background);
 }
-.icon-features {
+.features__icon {
   width: 70px;
   height: 70px;
   fill: currentColor;
