--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -12,7 +12,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.modal-title {
+.modal__title {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -22,7 +22,7 @@
   color: var(--modal-title-color);
 }
 /*-------------------------------Modal Form ----------- */
-.modal-box {
+.form__container {
   margin: 0;
   padding: 0;
 
@@ -31,12 +31,12 @@
   }
 }
 
-.modal-form-box {
+.form__box {
   width: 100%;
   margin-bottom: 10px;
 }
 
-.modal-input {
+.form__input {
   padding-left: 42px;
   width: 100%;
   height: 40px;
@@ -47,14 +47,14 @@
 
   transition: border-color 250ms var(--timing-function);
 
-    &:focus {
-        border-color: var(--accent-color);
-    }
-    &:focus + .modal-icon-svg {
-        fill: var(--accent-color);
-    }
+  &:focus {
+    border-color: var(--accent-color);
+  }
+  &:focus + .form__icon-svg {
+    fill: var(--accent-color);
+  }
 }
-.modal-label {
+.form__label {
   display: block;
   padding-bottom: 4px;
   font-weight: normal;
@@ -64,7 +64,7 @@
 
   color: var(--modal-text-color);
 }
-.modal-area-comment {
+.form__comment {
   padding: 12px 16px;
   width: 100%;
   height: 120px;
@@ -78,17 +78,16 @@
   &:focus {
     border-color: var(--accent-color);
   }
-  
 }
 
-.box-icon-input {
+.form__icon-box {
   position: relative;
   width: 100%;
 
   color: var(--modal-icon-input-color);
 }
 
-.modal-icon-svg {
+.form__icon-svg {
   position: absolute;
   top: 50%;
   left: 15px;
@@ -97,15 +96,13 @@
   height: 13px;
   fill: currentColor;
   transition: fill 250ms var(--timing-function);
-
 }
-
 
 /**------------------------- Checkbox */
-.modal-form-checkbox {
+.form__checkbox {
   margin-bottom: 30px;
 }
-.modal-policy-text {
+.form__policy-text {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,11 +111,11 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
-.modal-input-policy {
-  cursor: pointer;   
+.form__input-policy {
+  cursor: pointer;
 }
 
-.border-checkbox {
+.form__border-checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -131,25 +128,24 @@
   transition: background-color 250ms var(--timing-function),
     border-color 250ms var(--timing-function);
 
-    .modal-input-policy:focus + .modal-policy-text &,
-    .modal-input-policy:hover + .modal-policy-text & {
-        border-color: #2196f3;
-    }
-    .modal-input-policy:checked + .modal-policy-text & {
-        background-color: var(--accent-color);
-        border: none;
-    }
-
+  .form__input-policy:focus + .form__policy-text &,
+  .form__input-policy:hover + .form__policy-text & {
+    border-color: #2196f3;
+  }
+  .form__input-policy:checked + .form__policy-text & {
+    background-color: var(--accent-color);
+    border: none;
+  }
 }
-.icon-check {
+.form__icon-check {
   fill: transparent;
 
-    .modal-input-policy:checked:focus + .modal-policy-text & {
-        fill: var(--primary-white-color);
-    }
+  .form__input-policy:checked:focus + .form__policy-text & {
+    fill: var(--primary-white-color);
+  }
 }
 
-.modal-policy-link {
+.form__policy-link {
   color: var(--modal-policy-link);
   text-decoration: underline;
   font-size: 14px;
@@ -158,7 +154,7 @@
   text-decoration-skip-ink: none;
   margin-left: 3px;
 }
-.modal-button-submit {
+.button-submit {
   position: absolute;
   left: 50%;
   bottom: 40px;
@@ -193,13 +189,13 @@
 
   transition: color 250ms var(--timing-function);
 
-    &:hover,
-    &:focus {
-        color: var(--accent-color);
-    }
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
-.icon-button {
+.close__button {
   width: 100%;
   height: 100%;
   fill: currentColor;
