--- a/css/main.css
+++ b/css/main.css
@@ -363,7 +363,7 @@ body {
   background-color: var(--work-overlay-bgc-color);
 }
 
-.overlay__caption {
+.overlay__text {
   font-family: Roboto;
   font-size: 14px;
   font-weight: 700;
@@ -694,10 +694,9 @@ body {
 }
 
 .sign-up__container {
-  margin-left: 93px;
+  margin-left: auto;
   display: flex;
   align-items: flex-end;
-  flex-grow: 1;
 }
 
 .sign-up__label {
@@ -727,9 +726,9 @@ body {
   flex-direction: column;
 }
 
-.sugn-up__form {
+.sign-up__form {
   display: flex;
-  width: 358px;
+  align-items: flex-end;
 }
 
 .button {
@@ -772,11 +771,13 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  margin: 17px auto;
+  margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
-  transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
+  transition-property: bopacity, visibility;
+  transition-duration: var(--time);
+  transition-timing-function: var(--timing-function);
 }
 
 .is-hidden {
@@ -829,7 +830,9 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: none;
-  transition: border-color 250ms var(--timing-function);
+  transition-property: border-color;
+  transition-duration: var(--time);
+  transition-timing-function: var(--timing-function);
 }
 
 .form__input:focus {
@@ -858,7 +861,9 @@ body {
   border-radius: 4px;
   resize: none;
   outline: none;
-  transition: border-color 250ms var(--timing-function);
+  transition-property: border-color;
+  transition-duration: var(--time);
+  transition-timing-function: var(--timing-function);
 }
 
 .form__comment:focus {
@@ -879,7 +884,9 @@ body {
   width: 13px;
   height: 13px;
   fill: currentColor;
-  transition: fill 250ms var(--timing-function);
+  transition-property: fill;
+  transition-duration: var(--time);
+  transition-timing-function: var(--timing-function);
 }
 
 /**------------------------- Checkbox */
@@ -910,7 +917,9 @@ body {
   border: 2px solid var(--modal-checkbox-border-color);
   border-radius: 2px;
   margin-right: 8px;
-  transition: background-color 250ms var(--timing-function), border-color 250ms var(--timing-function);
+  transition-property: background-color, border-color;
+  transition-duration: var(--time);
+  transition-timing-function: var(--timing-function);
 }
 
 .form__input-policy:focus + .form__policy-text .form__border-checkbox,
@@ -970,7 +979,9 @@ body {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  transition: color 250ms var(--timing-function);
+  transition-property: color;
+  transition-duration: var(--time);
+  transition-timing-function: var(--timing-function);
 }
 
 .close:hover, .close:focus {
