--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -4,14 +4,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  margin: 17px auto;
+  margin: 0 auto;
 
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
   visibility: visible;
-  transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
 
+  @include transition(bopacity, visibility, null, var(--time), var(--timing-function));
  
 }
 
